DIS-81 - Refactor Shipment API - Graphql - back-end refactor moving shipment endpoints from RestController to Graphql Controller (QueryMapping and Mutations) - UI Refactor to use apollo client on shipment endpoints - Fix Automation Steps to use Graphql calls instead of HTTP